Add website icon to External Apps DataGrid view and fix card view bug
- Add NotNullToVisibilityConverter (Visible when non-null, Collapsed when null)
- Add website link icon to External Apps DataGrid Name column
- Fix card view bug where icon visibility was inverted (NullToVisibilityConverter → NotNullToVisibilityConverter)
- Use Viewbox wrapper for reliable icon sizing

--- a/src/Winhance.UI/Features/Common/Resources/Converters.xaml
+++ b/src/Winhance.UI/Features/Common/Resources/Converters.xaml
@@ -18,6 +18,7 @@
 
     <!-- Null/Empty Converters -->
     <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter"/>
+    <converters:NotNullToVisibilityConverter x:Key="NotNullToVisibilityConverter"/>
 
     <!-- Icon Converters -->
     <converters:IconConverter x:Key="IconConverter"/>
